--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title -->
-  <title>Document</title>
+  <title>FCC Tribute Page</title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
