--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>FCC Tribute Page</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
